CHATS_SIT/force-app/main/default/objects/API_Logger__c.object
<CustomObject>
    <fields>
        <fullName>API_Flow__c</fullName>
        <label>API Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATS Manual Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>API Logger</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>API Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>